fixes fixed navbar buttons on mobile

--- a/joe-lambert/less/header.less
+++ b/joe-lambert/less/header.less
@@ -18,11 +18,11 @@
     box-shadow: 0px -1px 15px 0px rgba(0, 0, 0, 0);
   }
   span.logo {
-    width: 65px;
-    height: 65px;
+    width: 60px;
+    height: 60px;
   }
   div {
-    width: 50%;
+    width: 90%;
     display: flex;
     justify-content: flex-end;
   }
@@ -30,7 +30,7 @@
     display: flex;
     justify-content: center;
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     position: relative;
     z-index: 5;
     margin-left: 15px;
@@ -39,10 +39,10 @@
       .button(
         @color: @main-yellow,
         @bg-color: @main-blue,
-        @padding: 10px,
+        @padding: 5px,
         @border-radius: 6px,
         @focus-shadow: rgba(0, 0, 0, 0.2),
-        @width: 130px,
+        @width: 100px,
         @border: 2px solid @main-blue
       );
     }
@@ -50,12 +50,20 @@
       .button(
         @color: @main-blue,
         @bg-color: transparent,
-        @padding: 10px,
+        @padding: 5px,
         @border-radius: 6px,
         @focus-shadow: rgba(0, 0, 0, 0.2),
-        @width: 130px,
+        @width: 100px,
         @border: 2px solid @main-blue
       );
+    }
+    @media @tablet {
+      font-size: 1.6rem;
+      &.signin,
+      &.signup {
+        padding: 10px;
+        width: 130px;
+      }
     }
   }
 }
